<resources>
    <string name="app_name">The Champ</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="button_cancel">Cancel</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="db_url">DB URL</string>
    <string name="confirm_password">Confirm password</string>
    <string name="login_page">Login</string>
    <string name="logout_page">Logout</string>
    <string name="main_page">Main Page</string>
    <string name="button_game">To the games</string>
    <string name="game_start">Start</string>
    <string name="logs_page">Logs</string>
    <string name="records_page">Records</string>
    <string name="clear_records">Clear Records</string>
    <string name="userlist_button">Users List</string>
    <string name="registered_button">Registered</string>
    <string name="applications_button">Applications</string>
    <string name="button_delete">Delete</string>
    <string name="button_approve">Approve</string>
    <string name="button_decline">Decline</string>
    <string name="button_setdb">Set DB</string>
    <string name="host">Host</string>
    <string name="port">Port</string>
    <string name="db_name">DB Name</string>
    <string name="change_pass">Change password</string>
    <string name="info_title">%s\'s Info</string>
    <string name="old_pass">Old password</string>
    <string name="admin_title">Admin Page</string>
    <string name="button_table">Create Table</string>
    <string name="button_create">Create</string>
    <string name="button_add_column">Add column</string>
    <string name="column_name">Enter Column name</string>
    <string name="table_name">Enter Table name</string>
    <string name="add_to_table_title">Add To Table: %s</string>
    <string name="button_clear">Clear</string>
    <string name="button_add">Add</string>
    <string name="button_tables">Tables</string>
    <string name="title_tables">Tables List</string>
    <string name="button_add_users">Add users</string>
    <string name="button_submit">Submit</string>
    <string name="button_calculate_score">%s score</string>
    <string name="button_admin">I am Admin</string>
    <string name="text_no_db">No DB set</string>
    <string name="button_change_db">Change DB</string>
    <string name="attempting_connection">Attempting to communicate with the server\.\.\.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="score">Score</string>
    <string name="user">User</string>
    <string name="actions">Actions</string>
    <string name="type">Type</string>
    <string name="table">Table</string>
    <string name="value">Value</string>
    <string name="column">Column</string>
    <string name="Scores">Scores</string>
    <string name="Rankings">Rankings</string>
    <string name="vs">vs</string>

</resources>
