<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.danielakua.dbapp.CreateTable">

    <TextView
        android:id="@+id/titleTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_table"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tableName"
        app:layout_constraintEnd_toStartOf="@+id/addColumnTable"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addColumnTable"
        android:layout_width="78dp"
        android:layout_height="68dp"
        android:background="@android:drawable/ic_input_add"
        android:onClick="AddColumnClick"
        app:layout_constraintBottom_toBottomOf="@+id/titleTable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/titleTable"
        app:layout_constraintTop_toTopOf="@+id/titleTable" />

    <EditText
        android:id="@+id/tableName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/table_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/NameTable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTable" />

    <TextView
        android:id="@+id/NameTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/name"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/columnListTable"
        app:layout_constraintEnd_toStartOf="@+id/TypeTable"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableName" />

    <TextView
        android:id="@+id/TypeTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/type"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/ActionsTable"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/NameTable"
        app:layout_constraintTop_toTopOf="@+id/NameTable" />

    <TextView
        android:id="@+id/ActionsTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/actions"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/TypeTable"
        app:layout_constraintTop_toTopOf="@+id/NameTable" />

    <ListView
        android:id="@+id/columnListTable"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/errorTable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NameTable">
    </ListView>

    <TextView
        android:id="@+id/errorTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/addLayoutTable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/columnListTable" />

    <Button
        android:id="@+id/createTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="CreateClick"
        android:text="@string/button_create"
        android:textAlignment="center"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/addLayoutTable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/addLayoutTable"
        app:layout_constraintTop_toTopOf="@+id/addLayoutTable"
        app:layout_constraintVertical_bias="0.463" />

    <LinearLayout
        android:id="@+id/addLayoutTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/createTable"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/errorTable">

        <EditText
            android:id="@+id/columnNameTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/column_name"
            android:inputType="textPersonName" />

        <Spinner
            android:id="@+id/columnTypeTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/confirmColumnTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="confirmColumnClick"
            android:text="@string/button_add_column"
            android:textAlignment="center"
            android:textAllCaps="false" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
